Fix menu overflow

--- a/css/main.css
+++ b/css/main.css
@@ -578,7 +578,6 @@ button.icon {
 ================================================================ */
 
 menu {
-    background-color: #373739;
     position: absolute;
     top: 0;
     left: 0;
@@ -649,7 +648,7 @@ menu {
         height: 100vh;
         top: 0;
         left: 0;
-        transform: translateX(100vw);
+        transform: translateX(-100vw);
         transition: opacity 300ms cubic-bezier(0.860, 0.000, 0.070, 1.000);
         opacity: 0;
     }
